--- a/aboutus.html
+++ b/aboutus.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>about us</title>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="crossorigin="anonymous"referrerpolicy="no-referrer"/>
 </head>
 <body>
@@ -24,7 +24,7 @@
             </div>
             <div class="eren">
               <div class="icon">
-                <a href=""><img src="/assets/Home/Plusgen_white.png" alt="" /></a>
+                <a href=""><img src="./assets/Home/Plusgen_white.png" alt="" /></a>
                 <div class="menu">
                   <nav>
                     <ul>
@@ -37,7 +37,7 @@
                       <li><a href="">career</a></li>
                       <li><a href="">contact us</a></li>
                       <li>
-                        <a href=""><img src="/assets/Home/Cart.png" alt="" /></a>
+                        <a href=""><img src="./assets/Home/Cart.png" alt="" /></a>
                       </li>
                     </ul>
                   </nav>
@@ -68,14 +68,14 @@
                 </p>
                 <div class="star">
                   <div class="bucks">
-                    <img src="/assets/About/capsules.png" alt="capsules" class="cloud">
+                    <img src="./assets/About/capsules.png" alt="capsules" class="cloud">
                     <div>
                       <h5>350+</h5>
                     <h6>brands</h6>
                     </div>
                   </div>
                   <div class="bucks">
-                    <img src="/assets/About/capsules.png" alt="capsules" class="cloud">
+                    <img src="./assets/About/capsules.png" alt="capsules" class="cloud">
                     <div>
                       <h5>5</h5>
                       <h6>R&D Centers</h6>
