--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           </div>
           <div class="eren">
             <div class="icon">
-              <a href=""><img src="/assets/Home/Plusgen_white.png" alt="" /></a>
+              <a href=""><img src="./assets/Home/Plusgen_white.png" alt="" /></a>
               <div class="menu">
                 <nav>
                   <ul>
