--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <li><a href="">career</a></li>
                     <li><a href="">contact us</a></li>
                     <li>
-                      <a href=""><img src="/assets/Home/Cart.png" alt="" /></a>
+                      <a href=""><img src="./assets/Home/Cart.png" alt="" /></a>
                     </li>
                   </ul>
                 </nav>
