--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               </form>
             </div>
             <div class="stack">
-              <img src="/assets/Home/banner_grp.png" alt="" />
+              <img src="./assets/Home/banner_grp.png" alt="" />
               <span>2,500 people booked medicines order in last 24 hours</span>
             </div>
           </div>
@@ -69,16 +69,16 @@
     </header>
     <section>
       <div class="emirates">
-        <img src="/assets/Home/Client 1.png" alt="" />
-        <img src="/assets/Home/Client 2.png" alt="" />
-        <img src="/assets/Home/Client 3.png" alt="" />
-        <img src="/assets/Home/Client 4.png" alt="" />
-        <img src="/assets/Home/Client 5.png" alt="" />
+        <img src="./assets/Home/Client 1.png" alt="" />
+        <img src="./assets/Home/Client 2.png" alt="" />
+        <img src="./assets/Home/Client 3.png" alt="" />
+        <img src="./assets/Home/Client 4.png" alt="" />
+        <img src="./assets/Home/Client 5.png" alt="" />
       </div>
     </section>
     <div class="doc">
       <div class="travia">
-        <img src="/assets/Home/About Us photos.png" alt="" />
+        <img src="./assets/Home/About Us photos.png" alt="" />
       </div>
       <div class="zoro">
         <span>About Us</span>
