--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <div class="bloody">
           <div class="parent">
             <div class="blood">
-              <img src="/assets/Home/Anti infectives.png" alt="infectives" />
+              <img src="./assets/Home/Anti infectives.png" alt="infectives" />
               <h4>Anti Infectives</h4>
               <p>
                 sunt qui repellat saepe quo velit aperiam idaliquam placeat.
@@ -124,7 +124,7 @@
           </div>
           <div class="parent">
             <div class="blood">
-              <img src="/assets/Home/Blood Related.png" alt="Blood Related" />
+              <img src="./assets/Home/Blood Related.png" alt="Blood Related" />
               <h4>blood related</h4>
               <p>
                 sunt qui repellat saepe quo velit aperiam id aliquam placeat.
@@ -136,7 +136,7 @@
           </div>
           <div class="parent">
             <div class="blood">
-              <img src="/assets/Home/Cardiac.png" alt="Cardiac" />
+              <img src="./assets/Home/Cardiac.png" alt="Cardiac" />
               <h4>Cardiac</h4>
               <p>
                 sunt qui repellat saepe quo velit aperiam id aliquam placeat.
@@ -148,7 +148,7 @@
           </div>
           <div class="parent">
             <div class="blood">
-              <img src="/assets/Home/Daibetic.png" alt="Daibetic" />
+              <img src="./assets/Home/Daibetic.png" alt="Daibetic" />
               <h4>Daibetic</h4>
               <p>
                 sunt qui repellat saepe quo velit aperiam id aliquam placeat.
@@ -175,7 +175,7 @@
         <div class="chat">
           <div class="support">
             <div class="zeb">
-              <img src="/assets/Home/Group 7.png" alt="" />
+              <img src="./assets/Home/Group 7.png" alt="" />
             </div>
             <div class="ron">
               <h4>Flexible</h4>
@@ -187,7 +187,7 @@
           </div>
           <div class="support">
             <div class="zeb">
-              <img src="/assets/Home/Group 12.png" alt="" />
+              <img src="./assets/Home/Group 12.png" alt="" />
             </div>
             <div class="ron">
               <h4>Supportive</h4>
@@ -199,7 +199,7 @@
           </div>
           <div class="support">
             <div class="zeb">
-              <img src="/assets/Home/Group 11.png" alt="" />
+              <img src="./assets/Home/Group 11.png" alt="" />
             </div>
             <div class="ron">
               <h4>Rewarding</h4>
@@ -212,7 +212,7 @@
         </div>
         <div class="popp">
             <div class="pop1">
-                <img src="/assets/Home/Rectangle 17.png" alt="rec17">
+                <img src="./assets/Home/Rectangle 17.png" alt="rec17">
             </div>
         </div>
     </div>
@@ -276,7 +276,7 @@
             </ul>
           </div>
           <div class="hats">
-            <img src="/assets/Home/Illustration.png" alt="Illustration" />
+            <img src="./assets/Home/Illustration.png" alt="Illustration" />
             <div class="lap">
                 <h2>Vaccines</h2>
                 <p>Lorem ipsum dolor sit amet consectetur. Arcu
@@ -322,7 +322,7 @@
         </div>
         <div class="bottles">
           <div class="vita">
-            <img src="/assets/Home/Rectangle 62.png" alt="vita" />
+            <img src="./assets/Home/Rectangle 62.png" alt="vita" />
             <div class="sub">
               <i class="fa-regular fa-calendar"></i><span>8 days</span>
               <h3>Vitamin C 500mg Sugarless Tab X</h3>
@@ -338,7 +338,7 @@
             </div>
           </div>
           <div class="vita">
-            <img src="/assets/Home/Rectangle 19306.png" alt="multivita" />
+            <img src="./assets/Home/Rectangle 19306.png" alt="multivita" />
             <div class="sub">
               <i class="fa-regular fa-calendar"></i><span>8 days</span>
               <h3>Vitamin C 500mg Sugarless Tab X</h3>
@@ -354,7 +354,7 @@
             </div>
           </div>
           <div class="vita">
-            <img src="/assets/Home/Rectangle 19306-1.png" alt="multivita1" />
+            <img src="./assets/Home/Rectangle 19306-1.png" alt="multivita1" />
             <div class="sub">
               <i class="fa-regular fa-calendar"></i><span>8 days</span>
               <h3>Vitamin C 500mg Sugarless Tab X</h3>
@@ -382,7 +382,7 @@
               <h4>See What Our Clients Say About Us</h4>
             </div>
               <div class="wild">
-                <img src="/assets/Home/Testimonial profile.png" alt="">
+                <img src="./assets/Home/Testimonial profile.png" alt="">
               </div>
               
                 <p class="parag3">"Lorem ipsum dolor sit amet consectetur. Integer fames est
@@ -407,13 +407,13 @@
       <div class="eren">
         <div class="footerr">
           <div class="footer1">
-            <a href=""><img src="/assets/Home/Plusgen.png" alt=""></a>
+            <a href=""><img src="./assets/Home/Plusgen.png" alt=""></a>
             <h4>Lorem ipsum dolor sit amet consectetur.</h4>
             <div class="mess">
-              <a href=""><img src="/assets/Home/052-linkedin.png" alt=""></a>
-              <a href=""><img src="/assets/Home/025-messenger.png" alt=""></a>
-              <a href=""><img src="/assets/Home/096-twitter.png" alt=""></a>
-              <a href=""><img src="/assets/Home/097-twoo.png" alt=""></a>
+              <a href=""><img src="./assets/Home/052-linkedin.png" alt=""></a>
+              <a href=""><img src="./assets/Home/025-messenger.png" alt=""></a>
+              <a href=""><img src="./assets/Home/096-twitter.png" alt=""></a>
+              <a href=""><img src="./assets/Home/097-twoo.png" alt=""></a>
             </div>
             </div>
           <div class="footer2">
