--- a/aboutus.html
+++ b/aboutus.html
@@ -28,14 +28,14 @@
                 <div class="menu">
                   <nav>
                     <ul>
-                      <li><a href="">home</a></li>
-                      <li><a href="">about us</a></li>
-                      <li><a href="">our partners</a></li>
-                      <li><a href="">all categories</a></li>
+                      <li><a href="/">home</a></li>
+                      <li><a href="./aboutus.html">about us</a></li>
+                      <li><a href="./ourpartners.html">our partners</a></li>
+                      <li><a href="./allcat.html">all categories</a></li>
                       <li><a href="">unios</a></li>
                       <li><a href="">blogs</a></li>
                       <li><a href="">career</a></li>
-                      <li><a href="">contact us</a></li>
+                      <li><a href="./contactus.html">contact us</a></li>
                       <li>
                         <a href=""><img src="./assets/Home/Cart.png" alt="" /></a>
                       </li>
@@ -82,14 +82,14 @@
                     </div>
                   </div>
                   <div class="bucks">
-                    <img src="/assets/About/capsules.png" alt="capsules" class="cloud">
+                    <img src="./assets/About/capsules.png" alt="capsules" class="cloud">
                     <div>
                       <h5>14</h5>
                       <h6>manufacturing facilities</h6>
                     </div>
                   </div>
                   <div class="bucks">
-                    <img src="/assets/About/capsules.png" alt="capsules" class="cloud">
+                    <img src="./assets/About/capsules.png" alt="capsules" class="cloud">
                     <div>
                       <h5>10</h5>
                       <h6>Countries</h6>
@@ -98,7 +98,7 @@
                 </div>
               </div>
               <div class="docthor">
-                <img src="/assets/About/Ellipse 626.png" alt="">
+                <img src="./assets/About/Ellipse 626.png" alt="">
               </div>
             </div>
           </div>
@@ -107,10 +107,10 @@
           <div class="hitage">
           <div class="jase">
             <div class="life">
-              <img src="/assets/About/Rectangle 19324.png" alt="24">
+              <img src="./assets/About/Rectangle 19324.png" alt="24">
             </div>
             <div class="style">
-              <img src="/assets/About/Rectangle 19325.png" alt="25">
+              <img src="./assets/About/Rectangle 19325.png" alt="25">
             </div>
           </div>
           <div class="otto">
@@ -165,22 +165,22 @@
                   <div class="fourdoc1">
                     <div class="jupiter">
                       <div class="insta">
-                        <img src="/assets/About/Ellipse 628.png" alt="">
+                        <img src="./assets/About/Ellipse 628.png" alt="">
                       </div>
                     </div>
                     <div class="jupiter">
                       <div class="insta1">
-                        <img src="/assets/About/Ellipse 628.png" alt="">
+                        <img src="./assets/About/Ellipse 628.png" alt="">
                       </div>
                     </div>
                     <div class="jupiter">
                       <div class="insta2">
-                        <img src="/assets/About/Ellipse 628-1.png" alt="">
+                        <img src="./assets/About/Ellipse 628-1.png" alt="">
                       </div>
                     </div>
                     <div class="jupiter">
                       <div class="insta3">
-                        <img src="/assets/About/Ellipse 628-2.png" alt="">
+                        <img src="./assets/About/Ellipse 628-2.png" alt="">
                       </div>
                     </div>
                   </div>
@@ -199,7 +199,7 @@
                   <h4>See What Our Clients Say About Us</h4>
                 </div>
                   <div class="wild">
-                    <img src="/assets/Home/Testimonial profile.png" alt="">
+                    <img src="./assets/Home/Testimonial profile.png" alt="">
                   </div>
                   
                     <p class="parag3">"Lorem ipsum dolor sit amet consectetur. Integer fames est
