--- a/contactus.html
+++ b/contactus.html
@@ -27,14 +27,14 @@
                   <div class="menu">
                     <nav>
                       <ul>
-                        <li><a href="">home</a></li>
-                        <li><a href="">about us</a></li>
-                        <li><a href="">our partners</a></li>
-                        <li><a href="">all categories</a></li>
+                        <li><a href="/">home</a></li>
+                        <li><a href="./aboutus.html">about us</a></li>
+                        <li><a href="./ourpartners.html">our partners</a></li>
+                        <li><a href="./allcat.html">all categories</a></li>
                         <li><a href="">unios</a></li>
                         <li><a href="">blogs</a></li>
                         <li><a href="">career</a></li>
-                        <li><a href="">contact us</a></li>
+                        <li><a href="./contactus.html">contact us</a></li>
                         <li>
                           <a href=""><img src="/assets/Home/Cart.png" alt="" /></a>
                         </li>
