--- a/aboutus.html
+++ b/aboutus.html
@@ -224,13 +224,13 @@
           <div class="eren">
             <div class="footerr">
               <div class="footer1">
-                <a href=""><img src="/assets/Home/Plusgen.png" alt=""></a>
+                <a href=""><img src="./assets/Home/Plusgen.png" alt=""></a>
                 <h4>Lorem ipsum dolor sit amet consectetur.</h4>
                 <div class="mess">
-                  <a href=""><img src="/assets/Home/052-linkedin.png" alt=""></a>
-                  <a href=""><img src="/assets/Home/025-messenger.png" alt=""></a>
-                  <a href=""><img src="/assets/Home/096-twitter.png" alt=""></a>
-                  <a href=""><img src="/assets/Home/097-twoo.png" alt=""></a>
+                  <a href=""><img src="./assets/Home/052-linkedin.png" alt=""></a>
+                  <a href=""><img src="./assets/Home/025-messenger.png" alt=""></a>
+                  <a href=""><img src="./assets/Home/096-twitter.png" alt=""></a>
+                  <a href=""><img src="./assets/Home/097-twoo.png" alt=""></a>
                 </div>
                 </div>
               <div class="footer2">
