--- a/allcat.html
+++ b/allcat.html
@@ -77,7 +77,7 @@
             <div class="tablets">
                 <div class="tablets1">
                     <div class="tab">
-                        <img src="/assets/AllCategories/Rectangle 62.png" alt="">
+                        <img src="./assets/AllCategories/Rectangle 62.png" alt="">
                         <h5>PRAZOSYNC XL 5</h5>
                         <div class="burger">
                             <p>0.88$</p>
@@ -85,7 +85,7 @@
                         </div>
                     </div>
                     <div class="tab">
-                        <img src="/assets/AllCategories/Rectangle 62-4.png" alt="">
+                        <img src="./assets/AllCategories/Rectangle 62-4.png" alt="">
                         <h5>PRAZOSYNC XL 2.5</h5>
                         <div class="burger">
                           <p>0.88$</p>
@@ -93,7 +93,7 @@
                       </div>
                     </div>
                     <div class="tab">
-                        <img src="/assets/AllCategories/Rectangle 62-2.png" alt="">
+                        <img src="./assets/AllCategories/Rectangle 62-2.png" alt="">
                         <h5>PIROXIVAC GEL 30GM</h5>
                         <div class="burger">
                           <p>0.88$</p>
@@ -101,7 +101,7 @@
                       </div>
                     </div>
                     <div class="tab">
-                        <img src="/assets/AllCategories/Rectangle 62-6.png" alt="">
+                        <img src="./assets/AllCategories/Rectangle 62-6.png" alt="">
                         <h5>PIRACITRUM 1200</h5>
                         <div class="burger">
                           <p>0.88$</p>
@@ -109,7 +109,7 @@
                       </div>
                     </div>
                     <div class="tab">
-                        <img src="/assets/AllCategories/Rectangle 62-1.png" alt="">
+                        <img src="./assets/AllCategories/Rectangle 62-1.png" alt="">
                         <h5>PRAZOSYNC XL 5</h5>
                         <div class="burger">
                           <p>0.88$</p>
@@ -117,7 +117,7 @@
                       </div>
                     </div>
                     <div class="tab">
-                        <img src="/assets/AllCategories/Rectangle 62-5.png" alt="">
+                        <img src="./assets/AllCategories/Rectangle 62-5.png" alt="">
                         <h5>PRAZOSYNC XL 2.5</h5>
                         <div class="burger">
                           <p>0.88$</p>
@@ -125,7 +125,7 @@
                       </div>
                     </div>
                     <div class="tab">
-                        <img src="/assets/AllCategories/Rectangle 62-3.png" alt="">
+                        <img src="./assets/AllCategories/Rectangle 62-3.png" alt="">
                         <h5>PIROXIVAC GEL 30GM</h5>
                         <div class="burger">
                           <p>0.88$</p>
@@ -133,7 +133,7 @@
                       </div>
                     </div>
                     <div class="tab">
-                        <img src="/assets/AllCategories/Rectangle 62-7.png" alt="">
+                        <img src="./assets/AllCategories/Rectangle 62-7.png" alt="">
                         <h5>PIRACITRUM 1200</h5>
                         <div class="burger">
                           <p>0.88$</p>
@@ -168,7 +168,7 @@
         <div class="tablets">
           <div class="tablets1">
             <div class="tab">
-              <img src="/assets/AllCategories/Rectangle 62-8.png" alt="">
+              <img src="./assets/AllCategories/Rectangle 62-8.png" alt="">
               <h5>PRAZOSYNC XL 2.5</h5>
               <div class="burger">
                 <p>9.88$</p>
@@ -176,7 +176,7 @@
             </div>
           </div>
           <div class="tab">
-            <img src="/assets/AllCategories/Rectangle 62-9.png" alt="">
+            <img src="./assets/AllCategories/Rectangle 62-9.png" alt="">
             <h5>PANCREOTE ADVANCE</h5>
             <div class="burger">
               <p>55.88$</p>
@@ -184,7 +184,7 @@
           </div>
         </div>
         <div class="tab">
-          <img src="/assets/AllCategories/Rectangle 62-10.png" alt="">
+          <img src="./assets/AllCategories/Rectangle 62-10.png" alt="">
           <h5>PANCREOTE 25000</h5>
           <div class="burger">
             <p>76.88$</p>
@@ -219,7 +219,7 @@
           <div class="tablets">
               <div class="tablets1">
                   <div class="tab">
-                      <img src="/assets/AllCategories/Rectangle 62-11.png" alt="">
+                      <img src=./assets/AllCategories/Rectangle 62-11.png" alt="">
                       <h5>PRAZOSYNC XL 5</h5>
                       <div class="burger">
                           <p>0.88$</p>
@@ -227,7 +227,7 @@
                       </div>
                   </div>
                   <div class="tab">
-                      <img src="/assets/AllCategories/Rectangle 62-15.png" alt="">
+                      <img src="./assets/AllCategories/Rectangle 62-15.png" alt="">
                       <h5>PRAZOSYNC XL 2.5</h5>
                       <div class="burger">
                         <p>0.88$</p>
@@ -235,7 +235,7 @@
                     </div>
                   </div>
                   <div class="tab">
-                      <img src="/assets/AllCategories/Rectangle 62-13.png" alt="">
+                      <img src="./assets/AllCategories/Rectangle 62-13.png" alt="">
                       <h5>PIROXIVAC GEL 30GM</h5>
                       <div class="burger">
                         <p>0.88$</p>
@@ -243,7 +243,7 @@
                     </div>
                   </div>
                   <div class="tab">
-                      <img src="/assets/AllCategories/Rectangle 62-17.png" alt="">
+                      <img src="./assets/AllCategories/Rectangle 62-17.png" alt="">
                       <h5>PIRACITRUM 1200</h5>
                       <div class="burger">
                         <p>0.88$</p>
@@ -251,7 +251,7 @@
                     </div>
                   </div>
                   <div class="tab">
-                      <img src="/assets/AllCategories/Rectangle 62-12.png" alt="">
+                      <img src="./assets/AllCategories/Rectangle 62-12.png" alt="">
                       <h5>PRAZOSYNC XL 5</h5>
                       <div class="burger">
                         <p>0.88$</p>
@@ -259,7 +259,7 @@
                     </div>
                   </div>
                   <div class="tab">
-                      <img src="/assets/AllCategories/Rectangle 62-16.png" alt="">
+                      <img src="./assets/AllCategories/Rectangle 62-16.png" alt="">
                       <h5>PRAZOSYNC XL 2.5</h5>
                       <div class="burger">
                         <p>0.88$</p>
@@ -267,7 +267,7 @@
                     </div>
                   </div>
                   <div class="tab">
-                      <img src="/assets/AllCategories/Rectangle 62-14.png" alt="">
+                      <img src="./assets/AllCategories/Rectangle 62-14.png" alt="">
                       <h5>PIROXIVAC GEL 30GM</h5>
                       <div class="burger">
                         <p>0.88$</p>
@@ -275,7 +275,7 @@
                     </div>
                   </div>
                   <div class="tab">
-                      <img src="/assets/AllCategories/Rectangle 62-18.png" alt="">
+                      <img src="./assets/AllCategories/Rectangle 62-18.png" alt="">
                       <h5>PIRACITRUM 1200</h5>
                       <div class="burger">
                         <p>0.88$</p>
@@ -296,7 +296,7 @@
             <h4>See What Our Clients Say About Us</h4>
           </div>
             <div class="wild">
-              <img src="/assets/Home/Testimonial profile.png" alt="">
+              <img src="./assets/Home/Testimonial profile.png" alt="">
             </div>
             
               <p class="parag3">"Lorem ipsum dolor sit amet consectetur. Integer fames est
@@ -338,13 +338,13 @@
     <div class="eren">
       <div class="footerr">
         <div class="footer1">
-          <a href=""><img src="/assets/Home/Plusgen.png" alt=""></a>
+          <a href=""><img src="./assets/Home/Plusgen.png" alt=""></a>
           <h4>Lorem ipsum dolor sit amet consectetur.</h4>
           <div class="mess">
-            <a href=""><img src="/assets/Home/052-linkedin.png" alt=""></a>
-            <a href=""><img src="/assets/Home/025-messenger.png" alt=""></a>
-            <a href=""><img src="/assets/Home/096-twitter.png" alt=""></a>
-            <a href=""><img src="/assets/Home/097-twoo.png" alt=""></a>
+            <a href=""><img src="./assets/Home/052-linkedin.png" alt=""></a>
+            <a href=""><img src="./assets/Home/025-messenger.png" alt=""></a>
+            <a href=""><img src="./assets/Home/096-twitter.png" alt=""></a>
+            <a href=""><img src="./assets/Home/097-twoo.png" alt=""></a>
           </div>
           </div>
         <div class="footer2">
