--- a/contactus.html
+++ b/contactus.html
@@ -23,7 +23,7 @@
               </div>
               <div class="eren">
                 <div class="icon">
-                  <a href=""><img src="/assets/Home/Plusgen_white.png" alt="" /></a>
+                  <a href=""><img src="./assets/Home/Plusgen_white.png" alt="" /></a>
                   <div class="menu">
                     <nav>
                       <ul>
@@ -36,7 +36,7 @@
                         <li><a href="">career</a></li>
                         <li><a href="./contactus.html">contact us</a></li>
                         <li>
-                          <a href=""><img src="/assets/Home/Cart.png" alt="" /></a>
+                          <a href=""><img src="./assets/Home/Cart.png" alt="" /></a>
                         </li>
                       </ul>
                     </nav>
@@ -66,16 +66,16 @@
                             malesuada amet tristique tempor eu quis justo.
                         </p>
                         <h4>+91-887766699</h4>
-                        <a href=""><img src="/assets/ContactUs/Frame-1.png" alt="phone"></a>
+                        <a href=""><img src="./assets/ContactUs/Frame-1.png" alt="phone"></a>
                         <h5>contact@plusgen.com</h5>
-                        <a href=""><img src="/assets/ContactUs/Frame.png" alt="messeger" class="campus"></a>
+                        <a href=""><img src="./assets/ContactUs/Frame.png" alt="messeger" class="campus"></a>
                         <h6>181/3, Mehrauli-Gurgaon Rd, Gurugram, Haryana 122001</h6>
-                        <a href=""><img src="/assets/ContactUs/Frame-2.png" alt="location" class="crocs"></a>
+                        <a href=""><img src="./assets/ContactUs/Frame-2.png" alt="location" class="crocs"></a>
                         <div class="messa">
-                          <a href=""><img src="/assets/ContactUs/052-linkedin.png" alt="" class="link"></a>
-                          <a href=""><img src="/assets/ContactUs/025-messenger.png" alt="" class="messengers"></a>
-                          <a href=""><img src="/assets/ContactUs/096-twitter.png" alt="" class="twitters"></a>
-                          <a href=""><img src="/assets/ContactUs/097-twoo.png" alt="" class="twoo"></a>
+                          <a href=""><img src="./assets/ContactUs/052-linkedin.png" alt="" class="link"></a>
+                          <a href=""><img src="./assets/ContactUs/025-messenger.png" alt="" class="messengers"></a>
+                          <a href=""><img src="./assets/ContactUs/096-twitter.png" alt="" class="twitters"></a>
+                          <a href=""><img src="./assets/ContactUs/097-twoo.png" alt="" class="twoo"></a>
                         </div>
                     </div>
                     <div class="honor">
@@ -113,13 +113,13 @@
         <div class="eren">
             <div class="footerr">
               <div class="footer1">
-                <a href=""><img src="/assets/Home/Plusgen.png" alt=""></a>
+                <a href=""><img src="./assets/Home/Plusgen.png" alt=""></a>
                 <h4>Lorem ipsum dolor sit amet consectetur.</h4>
                 <div class="mess">
-                  <a href=""><img src="/assets/Home/052-linkedin.png" alt=""></a>
-                  <a href=""><img src="/assets/Home/025-messenger.png" alt=""></a>
-                  <a href=""><img src="/assets/Home/096-twitter.png" alt=""></a>
-                  <a href=""><img src="/assets/Home/097-twoo.png" alt=""></a>
+                  <a href=""><img src="./assets/Home/052-linkedin.png" alt=""></a>
+                  <a href=""><img src="./assets/Home/025-messenger.png" alt=""></a>
+                  <a href=""><img src="./assets/Home/096-twitter.png" alt=""></a>
+                  <a href=""><img src="./assets/Home/097-twoo.png" alt=""></a>
                 </div>
                 </div>
               <div class="footer2">
